    * Added support for literal sort_by parameters using scalar references.
    * Existing map records are now correctly checked for when adding items
      through a many-to-many relationship.  (Reported by Drew Taylor)
    * Using a nonexistent column name in a primary or unique key is now a
      fatal error.  (Reported by Philip Dye)
    * Fixed a bug that caused inner joins to be used inappropriately when
      nested joins are disabled.
    * Fixed a bug that caused the auto-init system to fold multiple foreign
      keys that reference the same remote key into a single multi-column
      foreign key.  (Reported by Marlon Bailey)
    * Fixed a Manager bug that caused count queries to use incorrect
      table aliases when passed empty with_objects or require_objects
      array reference values.  (Reported by Denis Moskowitz)
    * Fixed a bug that prevented relationship and foreign key names from 
      being resolved when used in nested query parameters.
    * Relationship count methods no longer die when the count is zero.
      (Reported by Derek Watson)
    * Setting enum fields to undef not works correctly.  (Reported by Ovid)
    * Columns with custom DBI bind attributes are now updated correctly.
      (Reported by Derek Watson)
    * Epoch columns with zero (0) default values now work correctly.
      (Reported by Peter Karman)
    * Setting boolean columns to null (undef) now works correctly.
      (Reported by Derek Watson)
    * Fixed a bug that caused literal query parameters with bind arguments
      to become corrupted after their first use.
    * Changed the way classes are registered in order to fix a Loader bug
      that caused cross-database foreign keys to be erroneously created
      when tables with the same names exists in two different databases.
      (Reported by Adrian Howard)
    * Deleting one-to-one related objects on save now works correctly.
      (Reported by Ovid)