@@ -15,6 +15,9 @@
       through a many-to-many relationship.  (Reported by Drew Taylor)
     * Using a nonexistent column name in a primary or unique key is now a
       fatal error.  (Reported by Philip Dye)
+    * Multi-columns "select count(distinct ...)" queries now fall back to 
+      count(*) on a subselect in databases that do not support calling count
+      on multi-argument distinct clauses.  (Reported by Derek Watson)
     * Fixed a bug that caused inner joins to be used inappropriately when
       nested joins are disabled.
     * Fixed a bug that caused the auto-init system to fold multiple foreign
